Bug 274681 - dialog title should not have full stop at the end ("Archiving failed.")
Summary: dialog title should not have full stop at the end ("Archiving failed.")
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (master)
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-01 13:20 UTC by Alexander Potashev
Modified: 2011-06-02 23:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2011-06-01 13:20:51 UTC
Version:           Git (master) (using KDE 4.6.3) 
OS:                Linux

In kdepim/kmail/backupjob.cpp, at line 151:
> KMessageBox::sorry( mParentWidget, text, i18n( "Archiving failed." ) );

The full stop in the dialog title looks weird.

Reproducible: Always
Comment 1 Alexander Potashev 2011-06-01 13:23:27 UTC
The same problem in kdepim/kmail/backupjob.cpp at line 178:
> KMessageBox::information( mParentWidget, text, i18n( "Archiving finished." ) );
Comment 2 Sergio Martins 2011-06-02 11:39:04 UTC
Git commit 7b6361c8e00b357e3309d95621f906db0a86e3d3 by Sergio Martins.
Committed on 02/06/2011 at 03:27.
Pushed by smartins into branch 'next'.

"The full stop in the dialog title looks weird."

BUG: 274681

M  +1    -1    kmail/backupjob.cpp     

http://commits.kde.org/kdepim/7b6361c8e00b357e3309d95621f906db0a86e3d3
Comment 3 Alexander Potashev 2011-06-02 15:11:34 UTC
Please, also fix "Archiving finished." (see comment #1)
Comment 4 Laurent Montel 2011-06-02 22:26:34 UTC
Git commit 3bf8da6a6f5b64f8902fb9b4e3920abb9c69689a by Montel Laurent.
Committed on 02/06/2011 at 22:25.
Pushed by mlaurent into branch 'master'.

Fix bug #274681 - dialog title should not have full stop at the end

CCBUG: 274681

M  +1    -1    kmail/backupjob.cpp     

http://commits.kde.org/kdepim/3bf8da6a6f5b64f8902fb9b4e3920abb9c69689a
Comment 5 Alexander Potashev 2011-06-02 22:36:41 UTC
Thanks.
Comment 6 Sergio Martins 2011-06-02 23:21:24 UTC
Git commit 7d9b450d1b690b23fd4c5059f145d7a0d60247a2 by Sergio Martins.
Committed on 02/06/2011 at 03:27.
Pushed by smartins into branch 'master'.

"The full stop in the dialog title looks weird."

BUG: 274681
(cherry picked from commit 7b6361c8e00b357e3309d95621f906db0a86e3d3)

M  +1    -1    kmail/backupjob.cpp     

http://commits.kde.org/kdepim/7d9b450d1b690b23fd4c5059f145d7a0d60247a2