"The full stop in the dialog title looks weird."

BUG: 274681